[gd_scene load_steps=2 format=3 uid="uid://do7ty8f6hqde1"]

[ext_resource type="Script" uid="uid://caij6cy6npatj" path="res://scripts/JobSelector.gd" id="1_kng8w"]

[node name="JobSelector" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_kng8w")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -82.0
offset_right = -95.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1603, 1.65092)

[node name="JobDropdown" type="OptionButton" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="JobNameLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="JobDescLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="SkillsBox" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
